[tool.poetry]
name = "repl_python3_MedalBotx"
version = "0.1.0"
description = ""
authors = ["Stolas <cameramao1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.1"
dblpy = "^0.4.0"
discord = "^1.7.3"
waitress = "^2.0.0"
pyvips = "^2.1.15"
imageio = "^2.9.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
